crates/loxide_interpreter/tests/snapshots/integration@while__closure_in_body.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
snapshot_kind: text
---
var f1;

var f2;

var f3;


var i = 1;

while (i < 4) {
  var j = i;
  fun f() { print j; }

  if (j == 1) f1 = f;
  else if (j == 2) f2 = f;
  else f3 = f;

  i = i + 1;
}


f1(); // expect: 1
// => num(1)
f2(); // expect: 2
// => num(2)
f3(); // expect: 3
// => num(3)
