crates/loxide_interpreter/tests/snapshots/integration@while__return_closure.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
snapshot_kind: text
---
fun f() {
  while (true) {
    var i = "i";
    fun g() { print i; }
    return g;
  }
}


var h = f();

h(); // expect: i
// => str(i)
