crates/loxide_interpreter/tests/snapshots/integration@while__return_inside.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
snapshot_kind: text
---
fun f() {
  while (true) {
    var i = "i";
    return i;
  }
}


print f();
// => str(i)
// expect: i
