crates/loxide_interpreter/tests/snapshots/integration@while__syntax.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
snapshot_kind: text
---
// Single-expression body.
var c = 0;

while (c < 3) print c = c + 1;
// => num(1)
// => num(2)
// => num(3)
// expect: 1
// expect: 2
// expect: 3

// Block body.
var a = 0;

while (a < 3) {
  print a;
  a = a + 1;
}
// => num(0)
// => num(1)
// => num(2)
// expect: 0
// expect: 1
// expect: 2

// Statement bodies.
while (false) if (true) 1; else 2;

while (false) while (true) 1;

while (false) for (;;) 1;
